k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: init-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: init-frontend
  template:
    metadata:
      labels:
        app: init-frontend
    spec:
      serviceAccountName: init-frontend
      containers:
        - name: init-frontend
          image: init-frontend:v1.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: "0.5"
              memory: 0.5Gi
            limits:
              cpu: "1"
              memory: 1Gi
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 60
            httpGet:
              port: 80
              path: /health
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
