k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: init-frontend
  labels:
    app: init-frontend
spec:
  type: NodePort
  selector:
    app: init-frontend
  sessionAffinity: None
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
